--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <!-- header start  -->
     <header>
@@ -21,12 +22,32 @@
             <p>There are many variations of passages of Lorem Ipsum
                 available, but the majority have suffered alteration in some
                 form, by injected humour, or randomised words</p>
-            <button class="bg-white">Contact Us</button>
+            <button class="contact-btn">Contact Us</button>
         </div>
     </header>
     <!-- header end  -->
     <main>
-
+        <section class="failure-section">
+<div class="half-width">
+    <img src="images/person.png" alt="">
+</div>
+<div class="failure-details  half-width">
+    <h2>My failures of
+        previous year</h2>
+        <p>Contrary to popular belief, Lorem Ipsum is not
+            simply random text. It has roots in a piece of
+            classical Latin literature from 45 BC, making it over
+            2000 years old. Richard McClintock.
+            <ol>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief.</li>
+                <li>Contrary to popular , is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular simply.</li>
+            </ol>
+            </p>
+</div>
+        </section>
     </main>
     <footer>
 
