--- a/index.html
+++ b/index.html
@@ -28,29 +28,74 @@
     <!-- header end  -->
     <main>
         <section class="failure-section">
-<div class="half-width">
-    <img src="images/person.png" alt="">
-</div>
-<div class="failure-details  half-width">
-    <h2>My failures of
-        previous year</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not
-            simply random text. It has roots in a piece of
-            classical Latin literature from 45 BC, making it over
-            2000 years old. Richard McClintock.
-            <ol>
-                <li>Contrary to popular belief, is not simply.</li>
-                <li>Contrary to popular belief.</li>
-                <li>Contrary to popular , is not simply.</li>
-                <li>Contrary to popular belief, is not simply.</li>
-                <li>Contrary to popular simply.</li>
-            </ol>
-            </p>
-</div>
+            <div class="half-width">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="failure-details  half-width">
+                <h2>My failures of
+                    previous year</h2>
+                <p>Contrary to popular belief, Lorem Ipsum is not
+                    simply random text. It has roots in a piece of
+                    classical Latin literature from 45 BC, making it over
+                    2000 years old. Richard McClintock.
+                <ol>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ol>
+                </p>
+            </div>
+        </section>
+        <section class="plans">
+            <h2 class="plans-headings">My Plans</h2>
+            <div class="plans-container">
+                <div class="plan">
+                    <img src="images/icons/web.png" alt="">
+                    <h3>Web Development</h3>
+                    <p>I want to start
+                    </p>
+                </div>
+                <div class="plan">
+                    <img src="images/icons/js.png" alt="">
+                    <h3>Javascript</h3>
+                    <p>I want to learn
+                    </p>
+                </div>
+                <div class="plan">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3>Smoking Habit
+                    </h3>
+                    <p>I want to end
+                    </p>
+                </div>
+                <div class="plan">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3>ecommerce</h3>
+                    <p>I want to develop
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
-
+            <div class="half-width">
+                <h2>Future</h2>
+                <p>There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com
+                </p>
+                <p>Phone : 01500 00 00 00
+                </p>
+            </div>
+            <div>
+                <h3>Subscribe</h3>
+                <input class="input-field" type="email" placeholder="Enter your email">
+                <br>
+                <button class="contact-btn" id="subscribe-btn">Subscribe</button>
+            </div>
     </footer>
 </body>
 
