gradient-section-added

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
                 </div>
             </div>
         </section>
+        <section class="gradient-section">
+            <div class="gradient">
+                <h2>Awlays keep a positive
+                    mindset</h2>
+                    <button class="contact-btn">Contact Us</button>
+            </div>
+            
+        </section>
     </main>
     <footer>
             <div class="half-width">
@@ -89,6 +97,11 @@
                 </p>
                 <p>Phone : 01500 00 00 00
                 </p>
+                <div class="social-icon-container">
+                    <div class="icon"><img src="images/icons/fb.png" alt=""></div>
+                    <div class="icon"><img src="images/icons/twitter.png" alt=""></div>
+                    <div class="icon"><img src="images/icons/youtube.png" alt=""></div>
+                </div>
             </div>
             <div>
                 <h3>Subscribe</h3>
