font-awesome-added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet">
+   <!-- font awesome link  -->
+   <script src="https://kit.fontawesome.com/7623fb016b.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -38,14 +40,12 @@
                     simply random text. It has roots in a piece of
                     classical Latin literature from 45 BC, making it over
                     2000 years old. Richard McClintock.
-                <ol>
-                    <li>Contrary to popular belief, is not simply.</li>
-                    <li>Contrary to popular belief.</li>
-                    <li>Contrary to popular , is not simply.</li>
-                    <li>Contrary to popular belief, is not simply.</li>
-                    <li>Contrary to popular simply.</li>
-                </ol>
                 </p>
+                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
+                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
+                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
+                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
+                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
             </div>
         </section>
         <section class="plans">
