--- a/index.html
+++ b/index.html
@@ -48,6 +48,36 @@
                 <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
             </div>
         </section>
+        <section class="blog-area">
+            <div>
+                <h2 class="blog-title">My Blogs</h2>
+            </div>
+            <div class="blogs">
+<article class="blog">
+    <img src="images/person/1000_F_200096607_ddMpEWJW7MI9JL3JKLX0NZefAPat8a7b.jpg" alt="">
+    <h3>Developers watch out for these burnout symptoms</h3>
+    <p>by ALEX WATSON / 02 FEBRUARY 2023</p>
+</article>
+<article class="blog">
+    <img src="images/person/1000_F_296193909_5QwSneU07WktYrc2CAe2nsLyTzV4VmJR.jpg" alt="">
+    <h3>How to be appreciated as a developer for your hardwork.</h3>
+    <p>by ALEX WATSON / 02 FEBRUARY 2023</p>
+</article>
+<article class="blog">
+    <img src="images/person/1000_F_386832865_KzXYSvOLzUhztbeVD5d6pi2MBMqwBGAL.jpg" alt="">
+    <h3>How to learn Web Design at Home. </h3>
+    <p>by ALEX WATSON / 02 FEBRUARY 2023</p>
+</article>
+            </div>
+        </section>
+        <section class="gradient-section">
+            <div class="gradient">
+                <h2>Awlays keep a positive
+                    mindset</h2>
+                    <button class="contact-btn">Contact Us</button>
+            </div>
+            
+        </section>
         <section class="plans">
             <h2 class="plans-headings">My Plans</h2>
             <div class="plans-container">
@@ -77,14 +107,6 @@
                     </p>
                 </div>
             </div>
-        </section>
-        <section class="gradient-section">
-            <div class="gradient">
-                <h2>Awlays keep a positive
-                    mindset</h2>
-                    <button class="contact-btn">Contact Us</button>
-            </div>
-            
         </section>
     </main>
     <footer>
