--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <header>
         <div class="banner-text">
             <h1 class="heading">All Thinks Are Possible If You believe</h1>
-            <p>There are many variations of passages of Lorem Ipsum
-                available, but the majority have suffered alteration in some
-                form, by injected humour, or randomised words</p>
+            <p class="p-styles">They might make you feel you are useless or incomplete. Don't let it affect you. Keep calm and let your future prove that they were wrong.</p>
             <button class="contact-btn">Contact Us</button>
         </div>
     </header>
@@ -36,16 +34,14 @@
             <div class="failure-details  half-width">
                 <h2>My failures of
                     previous year</h2>
-                <p>Contrary to popular belief, Lorem Ipsum is not
-                    simply random text. It has roots in a piece of
-                    classical Latin literature from 45 BC, making it over
-                    2000 years old. Richard McClintock.
+                <p class="p-styles">Everyone experiences setbacks on their path to success. The key to success is not simply in overcoming failure, but in learning from past mistakes.
                 </p>
-                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
-                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
-                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
-                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
-                <p><i class="fa fa-check"></i> Contrary to popular belief, is not simply.</p>
+                <p class="failure-list"><i class="fa fa-check"></i>Dropping two courses 
+                </p>
+                <p class="failure-list"><i class="fa fa-check"></i> Getting back my ex.</p>
+                <p class="failure-list"><i class="fa fa-check"></i> Not starting buisness</p>
+                <p class="failure-list"><i class="fa fa-check"></i> Not enough reading</p>
+                
             </div>
         </section>
         <section class="blog-area">
@@ -74,7 +70,7 @@
             <div class="gradient">
                 <h2>Awlays keep a positive
                     mindset</h2>
-                    <button class="contact-btn">Contact Us</button>
+                    <button class="contact-btn">Call Now</button>
             </div>
             
         </section>
@@ -112,9 +108,7 @@
     <footer>
             <div class="half-width">
                 <h2>Future</h2>
-                <p>There are many variations of passages of Lorem Ipsum
-                    available, but the majority have suffered alteration in some
-                    form, by injected humour, or randomised words</p>
+                <p>Life can only be understood backwards; but it must be lived forwards. The future belongs to those who believe in the beauty of their dreams.</p>
                 <p>Email : info@gmail.com
                 </p>
                 <p>Phone : 01500 00 00 00
