--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet">
-   <!-- font awesome link  -->
-   <script src="https://kit.fontawesome.com/7623fb016b.js" crossorigin="anonymous"></script>
+    <!-- font awesome link  -->
+    <script src="https://kit.fontawesome.com/7623fb016b.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -21,12 +21,14 @@
     <header>
         <div class="banner-text">
             <h1 class="heading">All Thinks Are Possible If You believe</h1>
-            <p class="p-styles">They might make you feel you are useless or incomplete. Don't let it affect you. Keep calm and let your future prove that they were wrong.</p>
+            <p class="p-styles">They might make you feel you are useless or incomplete. Don't let it affect you. Keep
+                calm and let your future prove that they were wrong.</p>
             <button class="contact-btn">Contact Us</button>
         </div>
     </header>
     <!-- header end  -->
     <main>
+        <!-- failure section start  -->
         <section class="failure-section">
             <div class="half-width">
                 <img src="images/person.png" alt="">
@@ -34,46 +36,50 @@
             <div class="failure-details  half-width">
                 <h2>My failures of
                     previous year</h2>
-                <p class="p-styles">Everyone experiences setbacks on their path to success. The key to success is not simply in overcoming failure, but in learning from past mistakes.
+                <p class="p-styles">Everyone experiences setbacks on their path to success. The key to success is not
+                    simply in overcoming failure, but in learning from past mistakes.
                 </p>
-                <p class="failure-list"><i class="fa fa-check"></i>Dropping two courses 
+                <p class="failure-list"><i class="fa fa-check"></i>Dropping two courses
                 </p>
                 <p class="failure-list"><i class="fa fa-check"></i> Getting back my ex.</p>
                 <p class="failure-list"><i class="fa fa-check"></i> Not starting buisness</p>
                 <p class="failure-list"><i class="fa fa-check"></i> Not enough reading</p>
-                
+
             </div>
         </section>
+        <!-- blog section start  -->
         <section class="blog-area">
             <div>
                 <h2 class="blog-title">My Blogs</h2>
             </div>
             <div class="blogs">
-<article class="blog">
-    <img src="images/person/1000_F_200096607_ddMpEWJW7MI9JL3JKLX0NZefAPat8a7b.jpg" alt="">
-    <h3>Developers watch out for these burnout symptoms</h3>
-    <p>by ALEX WATSON / 02 FEBRUARY 2023</p>
-</article>
-<article class="blog">
-    <img src="images/person/1000_F_296193909_5QwSneU07WktYrc2CAe2nsLyTzV4VmJR.jpg" alt="">
-    <h3>How to be appreciated as a developer for your hardwork.</h3>
-    <p>by ALEX WATSON / 02 FEBRUARY 2023</p>
-</article>
-<article class="blog">
-    <img src="images/person/1000_F_386832865_KzXYSvOLzUhztbeVD5d6pi2MBMqwBGAL.jpg" alt="">
-    <h3>How to learn Web Design at Home. </h3>
-    <p>by ALEX WATSON / 02 FEBRUARY 2023</p>
-</article>
+                <article class="blog">
+                    <img src="images/person/1000_F_200096607_ddMpEWJW7MI9JL3JKLX0NZefAPat8a7b.jpg" alt="">
+                    <h3>Developers watch out for these burnout symptoms</h3>
+                    <p>by ALEX WATSON / 02 FEBRUARY 2023</p>
+                </article>
+                <article class="blog">
+                    <img src="images/person/1000_F_296193909_5QwSneU07WktYrc2CAe2nsLyTzV4VmJR.jpg" alt="">
+                    <h3>How to be appreciated as a developer for your hardwork.</h3>
+                    <p>by ALEX WATSON / 02 FEBRUARY 2023</p>
+                </article>
+                <article class="blog">
+                    <img src="images/person/1000_F_386832865_KzXYSvOLzUhztbeVD5d6pi2MBMqwBGAL.jpg" alt="">
+                    <h3>How to learn Web Design at Home. </h3>
+                    <p>by ALEX WATSON / 02 FEBRUARY 2023</p>
+                </article>
             </div>
         </section>
+        <!-- gradient box  -->
         <section class="gradient-section">
             <div class="gradient">
                 <h2>Awlays keep a positive
                     mindset</h2>
-                    <button class="contact-btn">Call Now</button>
+                <button class="contact-btn">Call Now</button>
             </div>
-            
+
         </section>
+        <!-- plan section  -->
         <section class="plans">
             <h2 class="plans-headings">My Plans</h2>
             <div class="plans-container">
@@ -105,26 +111,28 @@
             </div>
         </section>
     </main>
+    <!-- footer  -->
     <footer>
-            <div class="half-width">
-                <h2>Future</h2>
-                <p>Life can only be understood backwards; but it must be lived forwards. The future belongs to those who believe in the beauty of their dreams.</p>
-                <p>Email : info@gmail.com
-                </p>
-                <p>Phone : 01500 00 00 00
-                </p>
-                <div class="social-icon-container">
-                    <div class="icon"><img src="images/icons/fb.png" alt=""></div>
-                    <div class="icon"><img src="images/icons/twitter.png" alt=""></div>
-                    <div class="icon"><img src="images/icons/youtube.png" alt=""></div>
-                </div>
+        <div class="half-width">
+            <h2>Future</h2>
+            <p>Life can only be understood backwards; but it must be lived forwards. The future belongs to those who
+                believe in the beauty of their dreams.</p>
+            <p>Email : info@gmail.com
+            </p>
+            <p>Phone : 01500 00 00 00
+            </p>
+            <div class="social-icon-container">
+                <div class="icon"><img src="images/icons/fb.png" alt=""></div>
+                <div class="icon"><img src="images/icons/twitter.png" alt=""></div>
+                <div class="icon"><img src="images/icons/youtube.png" alt=""></div>
             </div>
-            <div>
-                <h3>Subscribe</h3>
-                <input class="input-field" type="email" placeholder="Enter your email">
-                <br>
-                <button class="contact-btn" id="subscribe-btn">Subscribe</button>
-            </div>
+        </div>
+        <div>
+            <h3>Subscribe</h3>
+            <input class="input-field" type="email" placeholder="Enter your email">
+            <br>
+            <button class="contact-btn" id="subscribe-btn">Subscribe</button>
+        </div>
     </footer>
 </body>
 
